--- a/www/index.html
+++ b/www/index.html
@@ -1,15 +1,34 @@
 <!DOCTYPE html>
 <html>
-
 <head>
 </head>
+<style>
+    label {
+    display: block;
+    font: 1rem 'Fira Sans', sans-serif;
+    }
 
+    input,
+    label {
+        margin: .4rem 0;
+    }
+    p{
+        font-size: x-large;
+    }
+</style>
 <body>
+    <p>Event Searcher</p>
     <form id="form">
         <label>City or zipcode:</label><br>
         <input type="text" id="city" name="city" value="Boston"><br>
-        <button>Search City</button>
     </form>
+    <label for="start">Please select date:</label>
+
+    <input type="date" id="date" 
+       value="2020-04-19"
+       min="2020-01-01" max="2022-12-31">
+    <br>
+    <button id="search">Find Concerts</button>
     <div id="events"></div> 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
